# elephas

./: .gitignore  Makefile  README.md  compose.yaml  package.json  pnpm-lock.yaml  schema.json
.github/workflows/: build-image.yaml  test.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile  compose.yaml  docker-compose.yml  package-lock.json  package.json  sqlx-data.json
backend/.sqlx/: query-0d70bcb221be8e0079306a84da28672c23ecdd72b399869ffac6e650e5db487b.json  query-175b6ffce2a3ab3207251099c41d38f0f1b57f7cdd8665935cf785647a8666da.json  query-348a862a9afafc153290787ccad009a26e366fec8b3a7b2a9cb4bf4d3510bfc0.json  query-36abce8a76e4da71b67684cbf3d086780e3bc8ee543fc567879a00381dd3be92.json  query-5fb39f3c8c7cbe8b76cf851df9b197b6a8902b99727a1567cab73e9c1ba114fc.json  query-9fc48c4d16ac6a97c14d585f44a531a0fd52b524e9bbe26a2fc55db5760e7f73.json  query-a4894023bf6f495c547efdf53362c66187afc5754532d22c095407e3f6f59132.json  query-a8db592513fe239ed087a736219945f09c6b8bdd6d1fef2bc3032df63c1ff6fb.json  query-b9a23f64eb79583c32f2c7c8a207aada2d1667497e948d82b206b9f60dfedeba.json  query-bafaa2151595c5e7e61bf7ea09144a56611692f84bdd731407e5fe50a8e1dd7e.json  query-ff21a613d148601559298686711c85f43227eead95e63b525d5d3f2426d0e338.json
backend/migrations/: 20230222011102_init.sql
backend/src/: error.rs  index.ts  lib.rs  main.rs  model.rs  routes.rs  service.rs  util.ts
backend/src/infra/: user.rs
backend/src/model/: activitypub.rs  ap_person.rs  follow.rs  key_pair.rs  nodeinfo.rs  post.rs  user.rs  user_profile.rs  webfinger.rs
backend/src/routes/: follow.rs  home.rs  host_meta.rs  inbox.rs  login.rs  me.rs  nodeinfo.rs  post.rs  reset_db.rs  signup.rs  user_info.rs  user_profile.rs  users.rs  webfinger.rs
backend/src/service/: activitypub.rs  remote_user.rs  user_profile.rs  webfinger.rs
fediverse/misskey/: compose.yaml
fediverse/misskey/.config/: default.yml
frontend/: .dockerignore  .eslintcache  .eslintrc.json  .gitignore  .prettierignore  Dockerfile  biome.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: spec.cy.ts
frontend/cypress/support/: commands.ts
frontend/src/: api.ts  config.ts  context.ts  hooks.ts  main.tsx  schema.ts
frontend/src/components/: AuthProvider.tsx  Home.tsx  Login.tsx  RequireAuth.tsx  Settings.tsx  Signup.tsx  UserProfile.tsx
frontend/tests/: ap.spec.ts  e2e.spec.ts  util.ts
nginx/: default.conf
proxy/: Caddyfile
