[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-web = "4.3.1"
async-trait = "0.1.67"
base64 = "0.21.0"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15.6"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
rsa = { version = "0.8.2", features = ["sha2"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sha256 = "1.1.2"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-actix-rustls"] }
thiserror = "1.0.40"
utoipa = { version = "3.1.1", features = ["actix_extras"] }
