[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-web = "4.3.1"
async-trait = "0.1.68"
base64 = "0.21.2"
bcrypt = "0.14.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "serde"] }
dotenvy = "0.15.7"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
rsa = { version = "0.8.2", features = ["sha2"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha256 = "1.1.3"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix-rustls", "chrono"] }
thiserror = "1.0.40"
tracing = "0.1.38"
tracing-actix-web = "0.7.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.3.0", features = ["actix_extras", "chrono"] }
uuid = "1.3.3"

