[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.8.0", features = ["redis-actor-session"] }
actix-web = "4.4.0"
async-trait = "0.1.74"
base64 = "0.21.4"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
dotenvy = "0.15.7"
mockall = "0.11.4"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
rsa = { version = "0.9.2", features = ["sha2"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha256 = "1.4.0"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-actix-web = "0.7.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utoipa = { version = "3.5.0", features = ["actix_extras", "chrono"] }
uuid = "1.5.0"
